AC_INIT(pcfg.in)

AC_CONFIG_HEADER(config.h)

AC_ARG_WITH(cflags,  [  --with-cflags=FLAGS     Set CFLAGS to FLAGS (optional)],
   CFLAGS="$with_cflags")

AC_ARG_WITH(ldflags, [  --with-ldflags=FLAGS    Set LDFLAGS to FLAGS (optional)],
   LDFLAGS="$with_ldflags")

AC_ARG_WITH(includes,[  --with-includes=DIR     Additionally search for includes in dir DIR (optional)],
   CPPFLAGS="$CPPFLAGS -I$with_includes")

AC_ARG_WITH(libs,    [  --with-libs=DIR         Additionally search for libraries in dir in DIR (optional)],
   LIBS="$LIBS -L$with_libs")

#AC_CHECK_PROGS(GTKCONFIG,gtk-config,gtk-config)
#GTK_CFLAGS="`$GTKCONFIG --cflags`"
#GTK_LIBS="`$GTKCONFIG --libs`"

AC_CHECK_PROGS(PERL,perl5.004_04 perl5.004 perl5 perl,perl)
AC_CHECK_PROGS(GIMP,gimp,gimp)

eval `$PERL -V:cc`
: ${CC=$cc}

AC_CHECK_FUNCS(vsnprintf,,[
   AC_MSG_WARN(vsnprintf not found.. I hope you are using gcc...)
])

AM_PATH_GIMP(1.0.0,, AC_MSG_ERROR(
** unable to find gimp, make sure it's in your path (version 1.0+ required!)
** You can get the Gimp from ftp://ftp.gimp.org/pub/gimp.
))

AC_HEADER_STDC

AC_SUBST(CPPFLAGS)
AC_SUBST(CFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(prefix)

AC_SUBST(PERL)
AC_SUBST(GIMP)
AC_SUBST(GIMPTOOL)
AC_SUBST(GIMP_CFLAGS)
AC_SUBST(GIMP_LIBS)

AC_OUTPUT(pcfg)

