AC_INIT(config.pl.in)

AC_PREFIX_DEFAULT($prefix)dnl from Makefile.PL

AC_CONFIG_HEADER(config.h)

AC_ARG_WITH(cflags,  [  --with-cflags=FLAGS     Set CFLAGS to FLAGS (optional)],
   CFLAGS="$with_cflags")

AC_ARG_WITH(ldflags, [  --with-ldflags=FLAGS    Set LDFLAGS to FLAGS (optional)],
   LDFLAGS="$with_ldflags")

AC_ARG_WITH(includes,[  --with-includes=DIR     Additionally search for includes in dir DIR (optional)],
   CPPFLAGS="$CPPFLAGS -I$with_includes")

AC_ARG_WITH(libs,    [  --with-libs=DIR         Additionally search for libraries in dir in DIR (optional)],
   LIBS="$LIBS -L$with_libs")

dnl AC_CHECK_PROGS(GTKCONFIG,gtk-config,gtk-config)
dnl TK_CFLAGS="`$GTKCONFIG --cflags`"
dnl GTK_LIBS="`$GTKCONFIG --libs`"

dnl PERL is delivered by the caller
dnl AC_CHECK_PROGS(PERL,perl5.004_04 perl5.004 perl5 perl,perl)
AC_MSG_CHECKING(for perl)
AC_MSG_RESULT($PERL)

AC_CHECK_PROGS(GIMP,gimp,gimp)

AC_CHECK_FUNCS(vsnprintf,,[
   AC_MSG_WARN(vsnprintf not found.. I hope you are using gcc...)
])

AM_PATH_GIMP(1.0.0,, AC_MSG_ERROR(
** unable to find gimp, make sure it's in your path (version 1.0+ required!)
** You can get the Gimp from ftp://ftp.gimp.org/pub/gimp.
))

AC_HEADER_STDC

ac_save_CPPFLAGS="$CPPFLAGS"
CPPFLAGS="$CPPFLAGS $GIMP_CFLAGS"
AC_EGREP_CPP(DIVIDE_MODE,[#include <libgimp/gimp.h>],AC_DEFINE(HAVE_DIVIDE_MODE))
CPPFLAGS="$ac_save_CPPFLAGS"

AC_SUBST(CPPFLAGS)
AC_SUBST(CFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(prefix)

AC_SUBST(PERL)
AC_SUBST(GIMP)
AC_SUBST(GIMPTOOL)
AC_SUBST(GIMP_CFLAGS)
AC_SUBST(GIMP_LIBS)

AC_OUTPUT(config.pl)

echo "now invoking perl to complete the configuration..."
exec $PERL $MAKEFILE_PL --writemakefile PREFIX="$prefix"
